--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
 	background:#3c9dca;
 	border: black solid thick; margin-left: auto;
     margin-right: auto;
+	margin-top:5%;
 }
 
 .white{
